--- a/app/src/main/res/layout/item_goods.xml
+++ b/app/src/main/res/layout/item_goods.xml
@@ -23,16 +23,18 @@
             android:textSize="16sp"
             android:id="@+id/tvName"
             android:layout_width="300dp"
-            android:layout_height="wrap_content" />
-        <RatingBar
-            android:id="@+id/ratingBar"
-            android:layout_width="wrap_content"
-            android:stepSize="0.5"
-            android:numStars="5"
-            android:rating="3.5"
-            android:isIndicator="true"
-            style="@style/Base.Widget.AppCompat.RatingBar.Small"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"/>
+<!--        <RatingBar-->
+<!--            android:id="@+id/ratingBar"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:stepSize="0.5"-->
+<!--            android:numStars="5"-->
+<!--            android:rating="3.5"-->
+<!--            android:isIndicator="true"-->
+<!--            style="@style/Base.Widget.AppCompat.RatingBar.Small"-->
+<!--            android:layout_height="wrap_content" />-->
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
