--- a/app/src/main/res/layout/item_selected_goods.xml
+++ b/app/src/main/res/layout/item_selected_goods.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:padding="10dp"
     android:background="#fff"
@@ -13,17 +13,19 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
     <TextView
-        android:layout_marginLeft="200dp"
+        android:layout_toLeftOf="@id/shopll_right"
+        android:layout_marginRight="30dp"
         android:textColor="#ea0d0d"
         android:text="￥ 100"
         android:textSize="16sp"
         android:id="@+id/tvCost"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
+<!--    android:layout_toRightOf="@id/tvPrice"-->
     <LinearLayout android:gravity="right"
-        android:layout_toRightOf="@id/tvPrice"
+        android:id="@+id/shopll_right"
         android:layout_alignParentRight="true"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content">
         <TextView android:clickable="true"
             android:id="@+id/tvMinus"
@@ -48,4 +50,4 @@
             android:layout_width="20dp"
             android:layout_height="20dp" />
     </LinearLayout>
-</LinearLayout>
+</RelativeLayout>
