--- a/app/src/main/res/layout/activity_order.xml
+++ b/app/src/main/res/layout/activity_order.xml
@@ -20,12 +20,14 @@
             android:layout_centerVertical="true"
             android:layout_marginLeft="10dp"/>
         <TextView
+            android:id="@+id/order_topcontent"
             android:layout_width="70dp"
             android:layout_height="match_parent"
             android:text="确认订单"
-            android:textSize="16sp"
+            android:textSize="17sp"
             android:textStyle="bold"
             android:gravity="center"
+            android:textColor="#000000"
             android:layout_centerInParent="true"/>
     </RelativeLayout>
     <RelativeLayout
@@ -38,13 +40,14 @@
         <ImageView
             android:id="@+id/order_locimg"
             android:layout_width="30dp"
-            android:layout_height="60dp"
+            android:layout_height="50dp"
             android:src="@drawable/weizhi" />
         <TextView
             android:id="@+id/order_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="代俊峰"
+            android:textColor="#000000"
             android:layout_toRightOf="@id/order_locimg"
             android:layout_marginLeft="5dp"
             android:textStyle="bold"/>
@@ -54,13 +57,13 @@
             android:layout_height="wrap_content"
             android:layout_toRightOf="@id/order_name"
             android:text="18090290357"
+            android:textColor="#000000"
             android:layout_marginLeft="8dp"
             android:textStyle="bold" />
         <TextView
             android:id="@+id/order_location"
             android:layout_width="270dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
             android:gravity="center_vertical"
             android:text="四川省成都市双流区西航港街道成都信息工程大学"
             android:layout_toRightOf="@id/order_locimg"
@@ -85,6 +88,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:text="支付方式"
+            android:textColor="#000000"
             android:textSize="17sp"
             android:gravity="center"
             android:layout_marginLeft="10dp"/>
@@ -120,19 +124,21 @@
             <ImageView
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-                android:src="@mipmap/ic_launcher"/>
+                android:src="@drawable/store"
+                android:scaleType="centerCrop"/>
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="零食店铺（成信大店）"
                 android:textSize="16sp"
+                android:textColor="#000000"
                 android:gravity="center_vertical"
                 android:layout_marginLeft="10dp"/>
         </LinearLayout>
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_order_list"
             android:layout_width="match_parent"
-            android:layout_height="170dp"
+            android:layout_height="160dp"
             android:background="#cccccc"/>
         <RelativeLayout
             android:layout_width="match_parent"
@@ -144,11 +150,13 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="配送费"/>
+                android:text="配送费"
+                android:textColor="#000000"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="￥2"
+                android:textColor="#000000"
                 android:layout_alignParentRight="true"/>
         </RelativeLayout>
         <RelativeLayout
@@ -161,7 +169,8 @@
                 android:id="@+id/order_order"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="订单￥21"/>
+                android:text="订单￥21"
+                android:textColor="#000000"/>
             <TextView
                 android:id="@+id/order_paymoney"
                 android:layout_width="wrap_content"
@@ -169,6 +178,7 @@
                 android:text="待支付￥23"
                 android:textSize="17sp"
                 android:textStyle="bold"
+                android:textColor="#000000"
                 android:layout_alignParentRight="true"/>
         </RelativeLayout>
     </LinearLayout>
