--- a/app/src/main/res/layout/activity_shopping_cart.xml
+++ b/app/src/main/res/layout/activity_shopping_cart.xml
@@ -21,11 +21,13 @@
             android:layout_centerVertical="true"
             android:layout_marginLeft="10dp"/>
         <TextView
+            android:id="@+id/shopping_topcontent"
             android:layout_width="70dp"
             android:layout_height="match_parent"
             android:text="商品购买"
-            android:textSize="16sp"
+            android:textSize="17sp"
             android:gravity="center"
+            android:textColor="#000000"
             android:layout_centerInParent="true"/>
         <TextView
             android:id="@+id/shopping_comment_btn"
