--- a/app/src/main/res/layout/item_goods.xml
+++ b/app/src/main/res/layout/item_goods.xml
@@ -8,15 +8,18 @@
         android:id="@+id/img"
         android:layout_margin="5dp"
         android:src="@mipmap/ic_launcher"
-        android:layout_width="50dp"
-        android:layout_height="50dp" />
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:scaleType="centerCrop"/>
 
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:paddingTop="5dp"
         android:paddingRight="5dp"
-        android:layout_height="wrap_content">
+        android:layout_height="70dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginRight="5dp">
         <TextView
             android:text="泡椒凤爪"
             android:textColor="#000"
@@ -24,20 +27,11 @@
             android:id="@+id/tvName"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"/>
-<!--        <RatingBar-->
-<!--            android:id="@+id/ratingBar"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:stepSize="0.5"-->
-<!--            android:numStars="5"-->
-<!--            android:rating="3.5"-->
-<!--            android:isIndicator="true"-->
-<!--            style="@style/Base.Widget.AppCompat.RatingBar.Small"-->
-<!--            android:layout_height="wrap_content" />-->
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp">
             <TextView
                 android:id="@+id/tvPrice"
                 android:text="￥ 100"
