--- a/app/src/main/res/layout/rv_order_item.xml
+++ b/app/src/main/res/layout/rv_order_item.xml
@@ -14,12 +14,14 @@
             android:id="@+id/order_item_gname"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="小学生雪糕"/>
+            android:text="小学生雪糕"
+            android:textColor="#000000"/>
         <TextView
             android:id="@+id/order_item_gnum"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="x3"
+            android:textColor="#000000"
             android:layout_marginLeft="30dp"
             android:layout_toLeftOf="@id/order_item_gprice"
             android:layout_marginRight="110dp"/>
@@ -28,6 +30,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="￥12"
+            android:textColor="#000000"
             android:layout_alignParentRight="true"/>
     </RelativeLayout>
 </LinearLayout>
