--- a/app/src/main/res/layout/rv_order_item.xml
+++ b/app/src/main/res/layout/rv_order_item.xml
@@ -18,18 +18,19 @@
             android:textColor="#000000"/>
         <TextView
             android:id="@+id/order_item_gnum"
-            android:layout_width="wrap_content"
+            android:layout_width="30dp"
             android:layout_height="wrap_content"
-            android:text="x3"
+            android:text="x33"
             android:textColor="#000000"
+            android:gravity="left"
             android:layout_marginLeft="30dp"
             android:layout_toLeftOf="@id/order_item_gprice"
             android:layout_marginRight="110dp"/>
         <TextView
             android:id="@+id/order_item_gprice"
-            android:layout_width="wrap_content"
+            android:layout_width="50dp"
             android:layout_height="wrap_content"
-            android:text="￥12"
+            android:text="￥99.00"
             android:textColor="#000000"
             android:layout_alignParentRight="true"/>
     </RelativeLayout>
