--- a/app/src/main/res/layouts/order/layout/fragment_personal_center_order_page_item.xml
+++ b/app/src/main/res/layouts/order/layout/fragment_personal_center_order_page_item.xml
@@ -26,10 +26,11 @@
             />
 
     </RelativeLayout>
+
     <ListView
         android:id="@+id/personal_center_order_page_list_goods"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="316dp" />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -58,7 +59,17 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="删除订单"
+                android:visibility="invisible"
                 android:background=" #FFFFFF"
+                android:textSize="20sp"/>
+            <Button
+                android:id="@+id/personal_center_order_page_list_button_pay"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/button_edge"
+                android:text="支付"
+                android:visibility="invisible"
+                android:textColor="#FF5722"
                 android:textSize="20sp"/>
         </LinearLayout>
     </LinearLayout>
