--- a/app/src/main/res/drawable/order_center_nav.xml
+++ b/app/src/main/res/drawable/order_center_nav.xml
@@ -9,7 +9,7 @@
     <!-- 主体背景颜色值 -->
     <item android:bottom="1dp">
         <shape>
-            <solid android:color="@color/themeColor" />
+            <solid android:color="#ffffff" />
         </shape>
     </item>
 </layer-list>
