--- a/app/src/main/res/layout/activity_order.xml
+++ b/app/src/main/res/layout/activity_order.xml
@@ -10,13 +10,12 @@
         android:background="@drawable/top_title"
         android:id="@+id/order_toptile"
         android:layout_alignParentTop="true">
-        <TextView
+        <ImageView
             android:id="@+id/order_back_btn"
-            android:layout_width="30dp"
-            android:layout_height="match_parent"
-            android:text="返回"
-            android:textSize="15sp"
-            android:gravity="center"
+            android:layout_width="22dp"
+            android:layout_height="22dp"
+            android:src="@drawable/leftw"
+            android:scaleType="centerCrop"
             android:layout_centerVertical="true"
             android:layout_marginLeft="10dp"/>
         <TextView
@@ -27,164 +26,178 @@
             android:textSize="17sp"
             android:textStyle="bold"
             android:gravity="center"
-            android:textColor="#000000"
+            android:textColor="#ffffff"
             android:layout_centerInParent="true"/>
     </RelativeLayout>
-    <RelativeLayout
-        android:id="@+id/order_location_nav"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="90dp"
-        android:padding="10dp"
-        android:background="#ffffff"
-        android:layout_below="@id/order_toptile">
-        <ImageView
-            android:id="@+id/order_locimg"
-            android:layout_width="30dp"
-            android:layout_height="50dp"
-            android:src="@drawable/weizhi" />
-        <TextView
-            android:id="@+id/order_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="代俊峰"
-            android:textColor="#000000"
-            android:layout_toRightOf="@id/order_locimg"
-            android:layout_marginLeft="5dp"
-            android:textStyle="bold"/>
-        <TextView
-            android:id="@+id/order_tel"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_toRightOf="@id/order_name"
-            android:text="18090290357"
-            android:textColor="#000000"
-            android:layout_marginLeft="8dp"
-            android:textStyle="bold" />
-        <TextView
-            android:id="@+id/order_location"
-            android:layout_width="270dp"
-            android:layout_height="wrap_content"
-            android:gravity="center_vertical"
-            android:text="四川省成都市双流区西航港街道成都信息工程大学"
-            android:layout_toRightOf="@id/order_locimg"
-            android:layout_marginLeft="5dp"
-            android:layout_alignParentBottom="true"
-            android:minLines="2"/>
-        <ImageView
-            android:layout_width="20dp"
-            android:layout_height="match_parent"
-            android:layout_alignParentRight="true"
-            android:src="@drawable/right"/>
-    </RelativeLayout>
-    <RelativeLayout
-        android:id="@+id/order_paymethod"
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:background="#ffffff"
-        android:layout_marginTop="15dp"
-        android:padding="10dp"
-        android:layout_below="@id/order_location_nav">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:text="支付方式"
-            android:textColor="#000000"
-            android:textSize="17sp"
-            android:gravity="center"
-            android:layout_marginLeft="10dp"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:text="在线支付"
-            android:gravity="center"
-            android:layout_toLeftOf="@id/zhifu_rightimg"
-            android:layout_marginRight="10dp"/>
-        <ImageView
-            android:id="@+id/zhifu_rightimg"
-            android:layout_width="20dp"
-            android:layout_height="match_parent"
-            android:layout_alignParentRight="true"
-            android:src="@drawable/right"/>
-    </RelativeLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#ffffff"
-        android:layout_marginTop="15dp"
-        android:paddingLeft="15dp"
-        android:orientation="vertical"
-        android:layout_below="@id/order_paymethod">
-        <LinearLayout
+        android:layout_height="match_parent"
+        android:layout_below="@id/order_toptile"
+        android:layout_above="@id/order_bottom_rl"
+        android:scrollbars="none">
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingTop="10dp"
-            android:paddingBottom="10dp"
-            android:gravity="center_vertical"
-            android:background="@drawable/top_title">
-            <ImageView
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:src="@drawable/store"
-                android:scaleType="centerCrop"/>
-            <TextView
+            android:layout_height="match_parent">
+            <RelativeLayout
+                android:id="@+id/order_location_nav"
+                android:layout_width="match_parent"
+                android:layout_height="86dp"
+                android:padding="10dp"
+                android:background="#ffffff"
+                >
+                <ImageView
+                    android:id="@+id/order_locimg"
+                    android:layout_width="30dp"
+                    android:layout_height="46dp"
+                    android:src="@drawable/weizhi"
+                    android:layout_centerVertical="true"/>
+                <TextView
+                    android:id="@+id/order_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="代俊峰"
+                    android:textColor="#000000"
+                    android:layout_toRightOf="@id/order_locimg"
+                    android:layout_marginLeft="5dp"
+                    android:textStyle="bold"/>
+                <TextView
+                    android:id="@+id/order_tel"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_toRightOf="@id/order_name"
+                    android:text="18090290357"
+                    android:textColor="#000000"
+                    android:layout_marginLeft="8dp"
+                    android:textStyle="bold" />
+                <TextView
+                    android:id="@+id/order_location"
+                    android:layout_width="270dp"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_vertical"
+                    android:text="四川省成都市双流区西航港街道成都信息工程大学"
+                    android:layout_toRightOf="@id/order_locimg"
+                    android:layout_marginLeft="5dp"
+                    android:layout_alignParentBottom="true"
+                    android:minLines="2"/>
+                <ImageView
+                    android:layout_width="20dp"
+                    android:layout_height="match_parent"
+                    android:layout_alignParentRight="true"
+                    android:src="@drawable/right"/>
+            </RelativeLayout>
+            <RelativeLayout
+                android:id="@+id/order_paymethod"
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:background="#ffffff"
+                android:layout_marginTop="15dp"
+                android:padding="10dp"
+                android:layout_below="@id/order_location_nav">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:text="支付方式"
+                    android:textColor="#000000"
+                    android:textSize="17sp"
+                    android:gravity="center"
+                    android:layout_marginLeft="10dp"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:text="在线支付"
+                    android:gravity="center"
+                    android:layout_toLeftOf="@id/zhifu_rightimg"
+                    android:layout_marginRight="10dp"/>
+                <ImageView
+                    android:id="@+id/zhifu_rightimg"
+                    android:layout_width="20dp"
+                    android:layout_height="match_parent"
+                    android:layout_alignParentRight="true"
+                    android:src="@drawable/right"/>
+            </RelativeLayout>
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="零食店铺（成信大店）"
-                android:textSize="16sp"
-                android:textColor="#000000"
-                android:gravity="center_vertical"
-                android:layout_marginLeft="10dp"/>
-        </LinearLayout>
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rv_order_list"
-            android:layout_width="match_parent"
-            android:layout_height="160dp"
-            android:background="#cccccc"/>
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingTop="10dp"
-            android:paddingBottom="10dp"
-            android:paddingRight="10dp"
-            android:background="@drawable/top_title">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="配送费"
-                android:textColor="#000000"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="￥2"
-                android:textColor="#000000"
-                android:layout_alignParentRight="true"/>
+                android:background="#ffffff"
+                android:layout_marginTop="15dp"
+                android:paddingLeft="15dp"
+                android:orientation="vertical"
+                android:layout_below="@id/order_paymethod">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingTop="10dp"
+                    android:paddingBottom="10dp"
+                    android:gravity="center_vertical"
+                    android:background="@drawable/order_center_nav">
+                    <ImageView
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:src="@drawable/store"
+                        android:scaleType="centerCrop"/>
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="零食店铺（成信大店）"
+                        android:textSize="16sp"
+                        android:textColor="#000000"
+                        android:gravity="center_vertical"
+                        android:layout_marginLeft="10dp"/>
+                </LinearLayout>
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rv_order_list"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="#cccccc"/>
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingTop="10dp"
+                    android:paddingBottom="10dp"
+                    android:paddingRight="10dp"
+                    android:background="@drawable/order_center_nav">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="配送费"
+                        android:textColor="#000000"/>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="￥2"
+                        android:textColor="#000000"
+                        android:layout_alignParentRight="true"/>
+                </RelativeLayout>
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingTop="10dp"
+                    android:paddingBottom="10dp"
+                    android:paddingRight="10dp">
+                    <TextView
+                        android:id="@+id/order_order"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="订单￥21"
+                        android:textColor="#000000"/>
+                    <TextView
+                        android:id="@+id/order_paymoney"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="待支付￥23"
+                        android:textSize="17sp"
+                        android:textStyle="bold"
+                        android:textColor="#000000"
+                        android:layout_alignParentRight="true"/>
+                </RelativeLayout>
+            </LinearLayout>
         </RelativeLayout>
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingTop="10dp"
-            android:paddingBottom="10dp"
-            android:paddingRight="10dp">
-            <TextView
-                android:id="@+id/order_order"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="订单￥21"
-                android:textColor="#000000"/>
-            <TextView
-                android:id="@+id/order_paymoney"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="待支付￥23"
-                android:textSize="17sp"
-                android:textStyle="bold"
-                android:textColor="#000000"
-                android:layout_alignParentRight="true"/>
-        </RelativeLayout>
-    </LinearLayout>
+    </ScrollView>
+
     <RelativeLayout
+        android:id="@+id/order_bottom_rl"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="50dp"
         android:background="#999999"
         android:layout_alignParentBottom="true">
         <TextView
@@ -194,7 +207,7 @@
             android:text="待支付￥23"
             android:gravity="center"
             android:textColor="#ffffff"
-            android:textSize="16sp"
+            android:textSize="17sp"
             android:layout_marginLeft="20dp"/>
         <TextView
             android:id="@+id/order_submit"
@@ -205,6 +218,6 @@
             android:textColor="#ffffff"
             android:gravity="center"
             android:layout_alignParentRight="true"
-            android:background="#000"/>
+            android:background="@color/themeColor"/>
     </RelativeLayout>
 </RelativeLayout>
