--- a/app/src/main/res/layout/activity_ready_pay.xml
+++ b/app/src/main/res/layout/activity_ready_pay.xml
@@ -14,10 +14,10 @@
             android:id="@+id/ready_pay_cancel"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:text="取消订单"
+            android:text="取消"
             android:textSize="15sp"
             android:gravity="center"
-            android:textColor="#008de1"
+            android:textColor="#ffffff"
             android:layout_centerVertical="true"
             android:layout_marginLeft="10dp"/>
         <TextView
@@ -27,7 +27,7 @@
             android:text="在线支付"
             android:textSize="17sp"
             android:textStyle="bold"
-            android:textColor="#000"
+            android:textColor="#ffffff"
             android:gravity="center"
             android:layout_centerInParent="true"/>
     </RelativeLayout>
@@ -47,7 +47,7 @@
             android:text="剩余支付时间"
             android:textSize="15sp"
             android:gravity="center"
-            android:textColor="#999999"
+            android:textColor="#666666"
             android:paddingTop="10dp"
             android:paddingBottom="10dp"/>
         <TextView
@@ -120,7 +120,7 @@
         android:layout_height="50dp"
         android:text="确认支付￥23.00"
         android:gravity="center"
-        android:background="#000000"
+        android:background="@color/themeColor"
         android:textColor="#ffffff"
         android:textStyle="bold"
         android:textSize="17sp"
