--- a/app/src/main/res/layout/activity_shopping_cart.xml
+++ b/app/src/main/res/layout/activity_shopping_cart.xml
@@ -11,13 +11,12 @@
         android:layout_height="60dp"
         android:background="@drawable/top_title"
         android:id="@+id/shopping_toptile">
-        <TextView
+        <ImageView
             android:id="@+id/shopping_back_btn"
-            android:layout_width="30dp"
-            android:layout_height="match_parent"
-            android:text="返回"
-            android:textSize="15sp"
-            android:gravity="center"
+            android:layout_width="22dp"
+            android:layout_height="22dp"
+            android:src="@drawable/leftw"
+            android:scaleType="centerCrop"
             android:layout_centerVertical="true"
             android:layout_marginLeft="10dp"/>
         <TextView
@@ -27,7 +26,7 @@
             android:text="商品购买"
             android:textSize="17sp"
             android:gravity="center"
-            android:textColor="#000000"
+            android:textColor="#ffffff"
             android:layout_centerInParent="true"/>
         <TextView
             android:id="@+id/shopping_comment_btn"
@@ -35,6 +34,7 @@
             android:layout_height="match_parent"
             android:text="评价"
             android:textSize="15sp"
+            android:textColor="#ffffff"
             android:gravity="center"
             android:layout_alignParentRight="true"
             android:layout_marginRight="10dp"/>
@@ -58,10 +58,11 @@
             android:layout_width="60dp"
             android:layout_height="match_parent">
             <ImageView android:layout_centerInParent="true"
-                android:src="@drawable/icon_cart"
+                android:src="@drawable/cart1"
                 android:layout_width="32dp"
                 android:id="@+id/imgCart"
-                android:layout_height="32dp" />
+                android:layout_height="32dp"
+                android:scaleType="centerCrop"/>
 
             <TextView android:gravity="center"
                 android:id="@+id/tvCount"
@@ -95,7 +96,7 @@
             android:layout_height="match_parent" />
         <TextView android:textColor="#fff"
             android:layout_width="120dp"
-            android:background="#008de1"
+            android:background="@color/themeColor"
             android:text="去结算"
             android:clickable="true"
             android:id="@+id/tvSubmit"
