--- a/app/src/main/res/layout/activity_order.xml
+++ b/app/src/main/res/layout/activity_order.xml
@@ -55,7 +55,7 @@
                     android:id="@+id/order_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="代俊峰"
+                    android:text=""
                     android:textColor="#000000"
                     android:layout_toRightOf="@id/order_locimg"
                     android:layout_marginLeft="5dp"
@@ -65,7 +65,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_toRightOf="@id/order_name"
-                    android:text="18090290357"
+                    android:text=""
                     android:textColor="#000000"
                     android:layout_marginLeft="8dp"
                     android:textStyle="bold" />
@@ -74,7 +74,7 @@
                     android:layout_width="270dp"
                     android:layout_height="wrap_content"
                     android:gravity="center_vertical"
-                    android:text="四川省成都市双流区西航港街道成都信息工程大学"
+                    android:text=""
                     android:layout_toRightOf="@id/order_locimg"
                     android:layout_marginLeft="5dp"
                     android:layout_alignParentBottom="true"
